tests/snapshots/validate__invalid__typo-unknown-field.snap
---
source: tests/validate.rs
expression: out.diagnostics()
---
ship::artifact::invalid

  × `typo-unknown-field.json` is not a valid release artifact (1 problem)
  help: see https://noirbizarre.github.io/gh-ship/specifications/release-
        artifact/

Error: ship::artifact::invalid

  × the artifact has unknown field `tags`
   ╭─[typo-unknown-field.json:4:3]
 3 │   "changed": false,
 4 │   "tags": "v1.0.0"
   ·   ───┬──
   ·      ╰── not allowed here
 5 │ }
   ╰────
  help: did you mean `tag`?
